--- a/src/assets/general.scss
+++ b/src/assets/general.scss
@@ -15,3 +15,19 @@ img {
   display: flex;
   justify-content: space-between;
 }
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.6rem;
+}
+
+p {
+  font-size: 1.2rem;
+}
+
+.popular {
+  color: orange;
+}
