--- a/src/assets/general.scss
+++ b/src/assets/general.scss
@@ -1,5 +1,8 @@
-body {
+* {
   box-sizing: border-box;
+}
+
+body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f3f5f5;
 }
@@ -12,8 +15,6 @@ img {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
 }
 
 h2 {
