--- a/src/assets/general.scss
+++ b/src/assets/general.scss
@@ -15,6 +15,9 @@ img {
 .container {
   max-width: 1200px;
   margin: 0 auto;
+  // display: flex;
+  // flex-direction: row;
+  // align-items: flex-start;
 }
 
 h2 {
