--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,4 +1,9 @@
 main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+
   section {
     max-width: 820px;
     margin-top: 20px;
@@ -24,6 +29,7 @@ main {
       padding: 15px;
       border-radius: 5px;
       gap: 1rem;
+      cursor: pointer;
 
       &--right {
         h3 {
@@ -34,6 +40,7 @@ main {
           font-size: 14px;
           line-height: 18px;
           padding-bottom: 15px;
+          min-width: 220px;
 
           span {
             color: orange;
@@ -50,6 +57,80 @@ main {
           height: 134px;
           object-fit: cover;
           border-radius: 5px;
+        }
+      }
+    }
+  }
+
+  aside {
+    width: 352px;
+    margin-top: 20px;
+    position: sticky;
+    top: 30px;
+    background-color: white;
+    padding: 15px;
+    border-radius: 7px;
+
+    h2 {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 16px;
+      padding: 15px;
+      text-align: center;
+      background-color: #00cdbd;
+      color: white;
+      font-weight: bold;
+      border-radius: 7px;
+      margin-bottom: 20px;
+    }
+
+    .panier {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+
+      button {
+        border: none;
+        background-color: white;
+        width: 25px;
+        height: 25px;
+        line-height: 15px;
+        border: 2px solid #00cdbd;
+        border-radius: 50%;
+        color: #00cdbd;
+        font-size: 1.2rem;
+        // margin-right: 10px;
+      }
+
+      span {
+        width: 20px;
+        text-align: center;
+      }
+
+      h3 {
+        font-size: 16px;
+        margin-left: 10px;
+        width: 180px;
+      }
+
+      p {
+        font-size: 16px;
+      }
+    }
+
+    .total {
+      border-top: 1px solid black;
+
+      p {
+        display: flex;
+        justify-content: space-between;
+        margin: 20px 0;
+      }
+
+      p:last-child {
+        border-top: 1px solid black;
+        padding-top: 20px;
+        span {
+          font-weight: bold;
         }
       }
     }
